--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: "Poppins", sans-serif;
     box-sizing: border-box;
 }
 body{
@@ -30,3 +30,14 @@ body{
     overflow: hidden;
     padding: 20px;
 }
+.toast{
+    width: 400px;
+    height: 80px;
+    background: #fff;
+    font-weight: 500px;
+    margin: 15px 0;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+    display: flex;
+    align-items: center;
+}
+.toast i{}
